--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="mt-[50px] mb-20">
           <div class="flex flex-col xl:flex-row xl:justify-between xl:items-center">
             <div class="">
-              <h5 class="text-lg font-bold mb-8 md:text-center xl:text-start">
+              <h5 class="text-lg font-bold mb-8 md:text-center xl:text-start xl:mb-0 xl:text-xl">
                 Trusted by <br class="hidden xl:block"> Global Companies
               </h5>
             </div>
